# tutor-matching-platform

./: .env.example  .gitignore  LICENSE  Log.md  README.md  index.html  package.json  pnpm-lock.yaml  tmp_rovodev_api_analysis.md  tmp_rovodev_api_endpoints_test.html  tmp_rovodev_api_integration_status.md  tmp_rovodev_jwt_explanation.md  tmp_rovodev_test_api.html  tmp_rovodev_test_connection.html  tmp_rovodev_test_course_creation.html  vite.config.js
backend/: NOTIFY_URL_IMPLEMENTATION.md  README.md  create_superuser.py  db.sqlite3  db_final.sqlite3  db_fresh.sqlite3  db_new.sqlite3  diagnose_ecpay.py  pyproject.toml  requirements.txt  run.py  settings.py
backend/ECPayAIO_Python-master/sample/: sample_order_search.py
backend/api/: views.py
backend/app/: __init__.py  config.py  ecpay_test.py  extensions.py  redirect_ecpay.py
backend/app/models/: __init__.py  booking.py  course.py  courses.py  model.py  payment.py  review.py  student.py  teacher.py  teachers.py  user.py
backend/app/routes/: __init__.py  auth_routes.py  booking_routes.py  course_routes.py  payment_routes.py  review_routes.py  student_route.py  teacher_routes.py  user_routes.py
backend/app/schemas/: __init__.py  booking_schema.py  course_schema.py  review_schema.py  schemas.py  student_schema.py  teacher_schema.py  user_schema.py
backend/app/templates/: test.html
backend/app/utils/: auth_required.py  jwt_handler.py  permissions.py  token_blacklist.py  (+1 more)
backend/backend/: settings.py  urls.py
backend/instance/: db.sqlite3  dev.db
backend/tutor/: admin.py  models.py  serializers.py  views.py
(+77 files in other folders)
